--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -31,11 +31,6 @@
                     android:src="@drawable/male1">
                 </ImageView>
 
-                <ImageButton
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:src="@drawable/ic_camera_foreground" />
-
 
             </FrameLayout>
 
@@ -50,78 +45,42 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-                <LinearLayout
+                <EditText
+                    android:id="@+id/height_entry_et"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Height" />
-
-                    <EditText
-                        android:id="@+id/height_entry_et"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="bottom"
-                        android:layout_weight="1"
-                        android:hint="Height in cms"
-                        android:inputType="number" />
-
-                </LinearLayout>
+                    android:layout_height="match_parent"
+                    android:layout_gravity="bottom"
+                    android:hint="Height in cms"
+                    android:inputType="number" />
                 <TextView
                     android:id="@+id/heightError_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
                     android:gravity="end"
+                    android:textColor="@color/darkred"
                     tools:visibility="visible"/>
 
-                <LinearLayout
+                <EditText
+                    android:id="@+id/weight_entry_et"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="weight" />
-
-                    <EditText
-                        android:id="@+id/weight_entry_et"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="bottom"
-                        android:layout_weight="1"
-                        android:hint="weight in kgs"
-                        android:inputType="number" />
-
-                </LinearLayout>
+                    android:layout_height="match_parent"
+                    android:layout_gravity="bottom"
+                    android:hint="weight in kgs"
+                    android:inputType="number" />
                 <TextView
                     android:id="@+id/weightError_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
                     android:gravity="end"
+                    android:textColor="@color/darkred"
                     tools:visibility="visible"/>
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Blood Pressure" />
 
                     <EditText
                         android:id="@+id/cistol_et"
@@ -129,7 +88,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="0.5"
                         android:gravity="bottom"
-                        android:hint="BP in hgmm"
+                        android:hint="Systolic value in mmHg"
                         android:inputType="number" />
 
                     <EditText
@@ -137,7 +96,7 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="0.5"
-                        android:hint="Bp"
+                        android:hint="Diastolic in mmHg"
                         android:inputType="number" />
                 </LinearLayout>
                 <TextView
@@ -146,90 +105,64 @@
                     android:layout_height="wrap_content"
                     android:visibility="gone"
                     android:gravity="end"
+                    android:textColor="@color/darkred"
                     tools:visibility="visible"/>
 
-
-                <LinearLayout
+                <EditText
+                    android:id="@+id/temperature_entry_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_gravity="bottom"
+                    android:hint="Temperature in cms"
+                    android:inputType="number" />
 
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Temperature" />
 
-                    <EditText
-                        android:id="@+id/temperature_entry_et"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="bottom"
-                        android:layout_weight="1"
-                        android:hint="Temperature in cms"
-                        android:inputType="number" />
-
-                </LinearLayout>
                 <TextView
                     android:id="@+id/tempError_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
                     android:gravity="end"
+                    android:textColor="@color/darkred"
                     tools:visibility="visible"/>
 
 
-                <LinearLayout
+                <EditText
+                    android:id="@+id/pulse_entry_et"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_gravity="center"
+                    android:hint="Pulse in Bpm"
+                    android:inputType="number" />
 
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="Pulse " />
-
-                    <EditText
-                        android:id="@+id/pulse_entry_et"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:hint="Pulse in .."
-                        android:inputType="number" />
-                </LinearLayout>
                 <TextView
                     android:id="@+id/pulseError_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
                     android:gravity="end"
+                    android:textColor="@color/darkred"
                     tools:visibility="visible"/>
 
             </LinearLayout>
 
             <Button
                 android:id="@+id/upload_details_btn"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="161dp"
-                android:layout_marginTop="100dp"
-                android:layout_marginEnd="162dp"
-                android:text="Upload"
+                android:layout_marginTop="50dp"
+                android:layout_marginHorizontal="15dp"
                 android:background="@drawable/button"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+                android:text="Upload"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+                tools:layout_editor_absoluteX="161dp" />
 
             <ProgressBar
                 android:id="@+id/dataentry_progressbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="181dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="1dp"
                 android:layout_marginEnd="182dp"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
